--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
+    "@ngrx/store-devtools": "^6.1.0",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "milligram": "^1.3.0",
