--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.3",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
